<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_hardware_interface</name>
  <version>0.0.1</version>
  <description>The diffdrive_hardware_interface package for custom hardware control</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>

  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>ros2_control</depend>
  <depend>diff_drive_controller</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros2_control</exec_depend>

</package>
